Signed-off-by: zhangbo8264 <zhangbo8264@163.com>

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,52 +1,109 @@
 .home{width:100%;
     position:relative;
 }
-
-.home-nav{
+.home-nav{z-index:1;
+    position:fixed;left:50px;right:10px;top:0;
     height:50px;
     border-bottom:1px solid #333;
-    box-shadow:0 1px 0 #666;
+    box-shadow:0 1px 2px #666;
+    background:url(images/bg.png) 0 0 repeat;
 }
 .home-nav li{
-    float:left;
-    padding:0 20px;
-    font-size:14px;line-height:50px;color:#fff;
-}
-/*opus
------------------------------------------------------------*/
-
-.opus{
-    width:90%;max-width:1200px;
-    margin:0 auto;
-}
-.opus-content{position:relative;
-    width:25%;padding:5px;
+    float:left;position:relative;
+    padding:0 20px;height:50px;
+    font-size:14px;line-height:50px;color:#222;
+    text-shadow:1px 1px 0 #666;
     box-sizing:border-box;
 }
-.opus-content > a{
+.home-nav li .iconfont{
+    margin-right:3px;
+    font-size:18px;color:#222;
+    text-shadow:1px 1px 0 #666;
+}
+.home-nav li.on,
+.home-nav li.on .iconfont{color:#ddd;
+    text-shadow:1px 1px 0 #333;
+}
+/*tl
+-----------------------------------------------------------*/
+
+.timeline{
+    position:relative;
+    padding:10px 40px;
+    margin:50px auto 0;
+}
+.timeline:before{
+    position:absolute;top:0;bottom:0;left:73px;
+    content:' ';
+    width:1px;
+    background:#666;
+    border-left:1px solid #333;
+}
+.tl-content{position:relative;
+    clear:both;padding:10px 0;
+    box-sizing:border-box;
+}
+.tl-content > .opus{
+    float:left;
     display:block;position:relative;
+    width:300px;
     padding:10px;
     background:#f1f1f1;
     border:1px solid #ddd;
-    /*border-radius:5px;*/
+    border-radius:4px;
+    box-shadow:0px 0px 2px 1px rgba(0,0,0,.2);
     box-sizing:border-box;
 }
-.opus-content > a img{display:block;margin-bottom:5px;width:100%;
+.tl-content > .opus img{display:block;margin-bottom:5px;width:100%;
     border-radius:5px;overflow:hidden;
     transition:all ease-out .3s;
 }
-.opus-content > a:hover img{opacity:1;}
-.opus-content > a strong{position:relative;overflow:hidden;
+.tl-content > .opus:hover img{opacity:1;}
+.tl-content > .opus strong{position:relative;overflow:hidden;
     display:block;padding:5px;
     font-weight:bold;
     font-size:16px;line-height:18px;color:#333;
 }
-.opus-content > a span{display:block;padding:0 5px;
+.tl-content > .opus span{display:block;padding:0 5px;
     font-size:12px;line-height:20px;color:#555;
     transition:all ease-out .3s;
 }
-.opus-content > a em{
+.tl-content > .opus em{
     display:block;padding:0 5px;
     font-size:12px;color:#555;
 }
-
+.tl-content > .userphoto {
+    float:left;
+    width:65px;
+}
+.tl-content > .userphoto em{
+    display:block;position:relative;
+    margin:0 auto;
+    width:65px;height:65px;
+    padding:3px;    background:#444;
+    box-shadow:0px 1px 1px  rgba(0,0,0,.5) inset;
+    border-radius:50%;
+    transition:all ease-out .2s;
+    box-sizing:border-box;
+}
+.tl-content > .userphoto img{
+    display:block;width:100%;height:100%;
+    box-shadow:1px 2px 2px rgba(0,0,0,.3);
+    border-radius:50%;
+}
+.tl-content > .userphoto span{
+    display:block;
+    width:100px;margin-left:-17px;margin-top:5px;
+    color:#ddd;text-align:center;
+    text-shadow:1px 1px 0 #333;
+    background:url(images/bg.png) 0 0 repeat;
+}
+.tl-content > .tl-type{
+    float:left;
+    display:block;padding-right:5px;
+    width:50px;height:33px;text-align:center;
+    line-height:33px;font-size:20px;color:#333;
+    border-bottom:1px solid #333;
+    box-shadow:0 1px 0 #666;
+    text-shadow:1px 1px 0 #666;
+}
