--- a/views/index.html
+++ b/views/index.html
@@ -25,131 +25,105 @@
 		<div class="home">
 			<div class="home-nav">
 				<ul>
-					<li>首页</li>
-					<li>理论</li>
-					<li>表演</li>
-					<li>教学</li>
+					<li class="on"><span class="iconfont">&#xe60a;</span>首页</li>
+					<li><span class="iconfont">&#xe60d;</span>表演</li>
+					<li><span class="iconfont">&#xe60b;</span>理论</li>
+					<li><span class="iconfont">&#xe60c;</span>教学</li>
 				</ul>
-				<div class="">
+				<div class="home-user">
 				</div>
 			</div>
-			<div class="opus">
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+			<div class="timeline">
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>用户名</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60d;</span>
+					<a href="javascript:void(0)" class="opus">
 						<img src="images/2.jpg">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
 				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>比较长的名字</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60b;</span>
+					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
 				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
 				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+				</div>	
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
 					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些想挑战这</span>
-					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
 						<img src="images/1.jpg">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>
-				<div class="opus-content">
-					<a href="javascript:void(0)" class="clearfix">
+				</div>	
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些想挑战这</span>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>
+				</div>	
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
+					</a>
+				</div>	
+				<div class="tl-content clearfix">
+					<a href="" class="userphoto">
+						<em><img src="images/photo.png" /></em>
+						<span>name</span>
+					</a>
+					<span class="iconfont tl-type">&#xe60c;</span>
+					<a href="javascript:void(0)" class="opus">
+						<strong>文章标题</strong>
+						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
+					</a>
+				</div>	
 			</div>
 		</div>
 	</div>
