--- a/views/work.html
+++ b/views/work.html
@@ -43,6 +43,7 @@
 							<span class="iconfont"></span><em></em>
 							<span class="iconfont"></span><em></em>
 						</p>
+						<span class="iconfont work-set">&#xe602;</span>
 					</li>
 					<li class="on">
 						<strong>ULMEN 审判由 13个挑战项目</strong>
