--- a/public/css/work.css
+++ b/public/css/work.css
@@ -87,3 +87,10 @@
 .work-theory li.on{
     background:#fff;
 }
+
+.work-set{
+    display:block;text-align:center;
+    position:absolute;top:10px;right:10px;
+    width:30px;height:30px;
+    line-height:30px;font-size:18px;color:#333;
+}
