--- a/views/chat.html
+++ b/views/chat.html
@@ -11,9 +11,13 @@
 <div class="wp">	
 
 	<div class="wp-nav">
-		<ul>
-			<li class="on"><span class="iconfont">&#xe607;</span></li>
+		<ul class="wp-nav-top">
+			<li class="on"><span class="iconfont">&#xe60a;</span></li>
+			<li><span class="iconfont">&#xe607;</span></li>
 			<li><span class="iconfont">&#xe608;</span></li>
+		</ul>
+		<ul class="wp-nav-bottom">
+			<li><span class="iconfont">&#xe602;</span></li>
 		</ul>
 	</div>
 
