--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 
 	<div class="wp-nav">
 		<ul class="wp-nav-top">
-			<li><span class="iconfont">&#xe60a;</span></li>
+			<li class="on"><span class="iconfont">&#xe60a;</span></li>
 			<li><span class="iconfont">&#xe607;</span></li>
 			<li><span class="iconfont">&#xe608;</span></li>
 		</ul>
@@ -21,17 +21,24 @@
 		</ul>
 	</div>
 
+	<div class="user">
+		<div class="user-box">
+		</div>
+	</div>
+
 	<div class="wp-cont">
 		<div class="home">
 			<div class="home-nav">
-				<ul>
-					<li class="on"><span class="iconfont">&#xe60a;</span>首页</li>
-					<li><span class="iconfont">&#xe60d;</span>表演</li>
-					<li><span class="iconfont">&#xe60b;</span>理论</li>
-					<li><span class="iconfont">&#xe60c;</span>教学</li>
+				<ul class="home-nav-main">
+					<li class="on"><span class="iconfont">&#xe60f;</span>最新发布<span class="iconfont">&#xe611;</span></li>
+					<li><span class="iconfont">&#xe610;</span>专题</li>
+					<li><span class="iconfont">&#xe609;</span>赛事</li>
 				</ul>
-				<div class="home-user">
-				</div>
+				<dl class="home-nav-own">
+					<dd><span class="iconfont first">&#xe612;</span>个人菜单<span class="iconfont">&#xe611;</span></dd>
+					<dd>登陆</dd>
+					<dd>注册</dd>
+				</dl>
 			</div>
 			<div class="timeline">
 				<div class="tl-content clearfix">
@@ -39,7 +46,10 @@
 						<em><img src="images/photo.png" /></em>
 						<span>用户名</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60d;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60d;</span>
+						<em>表演</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<img src="images/2.jpg">
 						<strong>文章标题</strong>
@@ -51,7 +61,10 @@
 						<em><img src="images/photo.png" /></em>
 						<span>比较长的名字</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60b;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60b;</span>
+						<em>理论</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
@@ -62,7 +75,10 @@
 						<em><img src="images/photo.png" /></em>
 						<span>name</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60c;</span>
+						<em>教学</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
@@ -73,64 +89,97 @@
 						<em><img src="images/photo.png" /></em>
 						<span>name</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60c;</span>
+						<em>教学</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>	
+				</div>
 				<div class="tl-content clearfix">
 					<a href="" class="userphoto">
 						<em><img src="images/photo.png" /></em>
 						<span>name</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60c;</span>
+						<em>教学</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
-						<img src="images/1.jpg">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>	
+				</div>
 				<div class="tl-content clearfix">
 					<a href="" class="userphoto">
 						<em><img src="images/photo.png" /></em>
 						<span>name</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60c;</span>
+						<em>教学</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>	
+				</div>
 				<div class="tl-content clearfix">
 					<a href="" class="userphoto">
 						<em><img src="images/photo.png" /></em>
 						<span>name</span>
 					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
+					<div class="tl-type">
+						<span class="iconfont">&#xe60c;</span>
+						<em>教学</em>
+					</div>
 					<a href="javascript:void(0)" class="opus">
 						<strong>文章标题</strong>
 						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
 					</a>
-				</div>	
-				<div class="tl-content clearfix">
-					<a href="" class="userphoto">
-						<em><img src="images/photo.png" /></em>
-						<span>name</span>
-					</a>
-					<span class="iconfont tl-type">&#xe60c;</span>
-					<a href="javascript:void(0)" class="opus">
-						<strong>文章标题</strong>
-						<span>ULMEN 审判由 13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这13个挑战项目所组成。每个项目都是由一些每个项目都是由一些想挑战这</span>
-					</a>
-				</div>	
+				</div>
 			</div>
 		</div>
 	</div>
 
 </div>
 
-<script data-main="/js/app.js" src="/js/lib/require.min.js"></script>
 
+<div class="article">
+	<div class="article-cont">
+		<div class="article-left">
+			<h1>文章标题</h1>
+			<div class="article-text">
+				<p>1966年，美国经济学家雷蒙德·弗农首次提出了产品生命周期理论，到现在这个理论经过种种演化发展仍然保持着强大的生命力。毋庸置疑，游戏也是一种产品，网络游戏作为互联网时代开始后出现较早的互联网产品，到今天已经形成了一个超过千亿的游戏消费市场，虽然中国由于网络普及等原因在网络游戏领域起步较晚，但在最近几年网络游戏市场的火爆让各大游戏厂商不断加大投入加快步伐，游戏业的市场激战就发生我们的眼皮底下。</p>
+				<img src="images/3.jpg" />
+				<p>作为一个游戏玩家，你一定听说过暴雪公司。1991年三个年轻人建立了暴雪的前身Silicon  Synapse（硅与神经键）公司，1994年更名为Blizzard，也就是现在的暴雪娱乐，1997年，暴雪专设了在线服务器“战网”，使星际争霸等游戏能够实现互联网对战，而不是之前流行的局域网对战，除了收获巨大成功的《魔兽争霸3·冰封王座》等RTS大作，真正让大众玩家了解到网络游戏魅力的作品，可能就属《魔兽世界》这款大家所熟知的MMORPG游戏了。</p>
+				<p>从2005年45级公测时代，再到现在6.2版本《地狱火危机》，WOW这款游戏已经经过了10年的历练，在更迭速度如此之快的网游市场，一款游戏能达到十年寿命是一个不可以思议的事情，但是就算不可思议，从2010年的1200万玩家，再到现在玩家人数锐减到560万，魔兽世界这款游戏还是逃脱不了产品生命周期的“诅咒”。（从玩家数量折线图也能看到产品生命周期图的影子）</p>
+				<img src="images/4.jpg" />
+				<p>从今年上海ChinaJoy的暴雪展台情况来看，《魔兽世界》和《暗黑破坏神3》的展台人数明显很少，而排队新游戏《炉石传说》、《风暴英雄》、《守望先锋》的玩家需要等相当长（至少两小时）的时间才可以一睹新游戏阵容。WOW的没落让人唏嘘，但是暴雪并没有因此而丧失生命力，因为他有一系列处在不同生命周期上游戏作为支撑。</p>
+				<img src="images/5.jpg" />
+				<p>一个企业，特别是游戏公司，可以靠一款好游戏发家，但不可能靠一款好游戏长久生存。最好的例子就是我们熟知的上海寰宇之星，《仙剑奇侠传》系列无疑使我们国人的骄傲，当然也是最大的遗憾。单一的商业模式，一部一推的游戏产品，太容易由于资金和团队的原因造成企业的动荡；再加上游戏界急速迭代的游戏模式变化，手机移动端的竞争，新科技（体感、虚拟现实）的冲击，只守着旧路的寰宇之星也落得一个团队解散的下场。不过最近有新闻说上海软星复活，将主攻手游，希望这个传闻是真的。</p>
+			</div>
+			<div class="article-discuss">
+
+			</div>
+		</div>
+		<div class="article-right">
+			<span class="iconfont close">&#xe613;</span>
+		</div>
+	</div>
+</div>
+
+<script data-main="/js/app.js" src="/js/lib/require.min.js"></script>
+<script type="text/javascript" src="/js/jquery.min.js"></script>
+<script>
+	$('.close').click(function(){
+		$('.article').hide();
+	});
+	$('.opus').click(function(){
+		$('.article').show();
+	});
+</script>
 </body>
 </html>
