--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<title>网站开发</title>
+	<title>{{title}}</title>
 	<link rel="stylesheet" href="/css/reset.css" />
 	<link rel="stylesheet" href="/css/home.css">
 	<link rel="stylesheet" href="/css/icon/iconfont.css">
